--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,19 +3,16 @@
 # Check https://circleci.com/docs/2.0/language-javascript/ for more details
 #
 version: 2
-jobs:
-  build:
+
+executors:
+  front-exec:
     docker:
-      # specify the version you desire here
       - image: circleci/node:10
-
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/mongo:3.4.4
-
     working_directory: ~/repo
 
+jobs:
+  build-front:
+    executor: front-exec
     steps:
       - checkout
 
@@ -33,5 +30,18 @@ jobs:
             - frontend/node_modules
           key: v1-dependencies-{{ checksum "frontend/package.json" }}
 
+  test-front:
+    executor: front-exec
+    steps:
       # run tests!
       - run: cd frontend && npm test
+
+workflows:
+  version: 2
+
+  build-test-front:
+    jobs:
+      - build-front
+      - test-front:
+          requires:
+            - build-front
