--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -127,6 +127,14 @@ jobs:
             - v1-back-dependencies-{{ checksum "backend/tcs-service/tcs-service.csproj" }}
             # fallback to using the latest cache if no exact match is found
             - v1-back-dependencies-
+      - run:
+          name: Install Docker client
+          command: |
+            set -x
+            VER="17.03.0-ce"
+            curl -L -o /tmp/docker-$VER.tgz https://get.docker.com/builds/Linux/x86_64/docker-$VER.tgz
+            tar -xz -C /tmp -f /tmp/docker-$VER.tgz
+            mv /tmp/docker/* /usr/bin
 
       - run: docker login -u $DOCKER_USER -p $DOCKER_PASS
       - run: docker build -t lcbutch/tcs-service:$CIRCLE_BRANCH backend/tcs-service/
@@ -145,9 +153,9 @@ workflows:
       - test-front:
           requires:
             - build-front
-      # - deploy-front:
-      #     requires:
-      #       - test-front
+      - deploy-front:
+          requires:
+            - test-front
       - build-back:
           requires:
             - checkout-code-back
