--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -11,7 +11,17 @@
     "react/prop-types": 0,
     "no-underscore-dangle": 0,
     "import/imports-first": ["error", "absolute-first"],
-    "import/newline-after-import": "error"
+    "import/newline-after-import": "error",
+    "jsx-a11y/label-has-associated-control": [
+      2,
+      {
+        "labelComponents": ["CustomInputLabel"],
+        "labelAttributes": ["label"],
+        "controlComponents": ["Field"],
+        "depth": 3
+      }
+    ],
+    "jsx-a11y/label-has-for": off
   },
   "globals": {
     "window": true,
