--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -30,7 +30,8 @@
     "FormData": true,
     "FileReader": true,
     "Blob": true,
-    "navigator": true
+    "navigator": true,
+    "fetch": true
   },
   "parser": "babel-eslint"
 }
