--- a/backend/tcs-service/Dockerfile
+++ b/backend/tcs-service/Dockerfile
@@ -14,4 +14,5 @@ FROM mcr.microsoft.com/dotnet/core/aspnet:2.2
 EXPOSE 80
 WORKDIR /app
 COPY --from=build-env /app/out .
+COPY --from=build-env /app/SampleData ./SampleData
 ENTRYPOINT ["dotnet", "tcs-service.dll"]
