--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,9 +1,11 @@
 # Stage 1 - the build process
+ARG REACT_APP_BACKEND
 FROM node:10 as build-deps
 WORKDIR /usr/src/app
 COPY package.json package-lock.json ./
 RUN npm install
 COPY . ./
+ENV REACT_APP_BACKEND=$REACT_APP_BACKEND
 RUN npm run build
 
 # Stage 2 - the production environment
@@ -11,4 +13,5 @@ FROM nginx:1.12-alpine
 COPY --from=build-deps /usr/src/app/build /var/www
 COPY nginx.conf /etc/nginx/nginx.conf
 EXPOSE 80
+
 CMD ["nginx", "-g", "daemon off;"]
