Fix Arg in Dockerfile

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,12 +1,13 @@
 # Stage 1 - the build process
-ARG REACT_APP_BACKEND
 FROM node:10 as build-deps
+ARG REACT_APP_BACKEND
 WORKDIR /usr/src/app
 COPY package.json package-lock.json ./
 RUN npm install
 COPY . ./
-ENV REACT_APP_BACKEND=$REACT_APP_BACKEND
-RUN npm run build
+
+ENV REACT_APP_BACKEND $REACT_APP_BACKEND
+RUN REACT_APP_BACKEND=${REACT_APP_BACKEND} npm run build
 
 # Stage 2 - the production environment
 FROM nginx:1.12-alpine
