--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
+    "react-vis": "^1.11.7",
     "styled-components": "^4.3.1",
     "yup": "^0.27.0"
   },
