--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "normalize.css": "^8.0.1",
     "ramda": "^0.26.1",
     "react": "^16.8.6",
+    "react-csv": "^1.1.1",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
     "react-vis": "^1.11.7",
