--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,8 @@
     "react-csv": "^1.1.1",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
-    "react-vis": "^1.11.7",
     "styled-components": "^4.3.1",
+    "victory": "^32.3.3",
     "yup": "^0.27.0"
   },
   "scripts": {
