--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^4.0.0",
     "@testing-library/react": "^8.0.1",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
