--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^16.8.6",
     "react-icons": "^3.7.0",
     "react-scripts": "3.0.1",
+    "react-spinners": "^0.5.13",
     "styled-components": "^4.3.1",
     "victory": "^32.3.3",
     "yup": "^0.27.0"
