--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "react-csv": "^1.1.1",
     "react-dom": "^16.8.6",
     "react-icons": "^3.7.0",
+    "react-loading-overlay": "^1.0.1",
     "react-scripts": "3.0.1",
     "react-spinners": "^0.5.13",
     "styled-components": "^4.3.1",
