Deploy production frontend

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -73,7 +73,9 @@ jobs:
 
       - run: docker login -u $DOCKER_USER -p $DOCKER_PASS
       - run: docker build --build-arg REACT_APP_BACKEND=$REACT_APP_BACKEND --build-arg REACT_APP_TOKEN=$REACT_APP_TOKEN -t lcbutch/tcs-front:$CIRCLE_BRANCH frontend/
+      - run: docker build --build-arg REACT_APP_BACKEND=$REACT_APP_BACKEND_PROD --build-arg REACT_APP_TOKEN=$REACT_APP_TOKEN -t lcbutch/tcs-front:prod frontend/
       - run: docker push lcbutch/tcs-front:$CIRCLE_BRANCH
+      - run: docker push lcbutch/tcs-front:prod
 
   checkout-code-back:
     executor: back-exec
