--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "ramda": "^0.26.1",
     "react": "^16.8.6",
     "react-csv": "^1.1.1",
+    "react-datetime-picker": "^2.7.1",
     "react-dom": "^16.8.6",
     "react-icons": "^3.7.0",
     "react-loading-overlay": "^1.0.1",
