--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,18 +1,10 @@
-# Stage 1 - the build process
-FROM node:10 as build-deps
-ARG REACT_APP_BACKEND
-WORKDIR /usr/src/app
+# React app located in /app/build
+
+FROM node:13-alpine
+WORKDIR /app
 COPY package.json package-lock.json ./
 RUN npm install
 COPY . ./
-
-ENV REACT_APP_BACKEND $REACT_APP_BACKEND
-RUN REACT_APP_BACKEND=${REACT_APP_BACKEND} npm run build
-
-# Stage 2 - the production environment
-FROM nginx:1.12-alpine
-COPY --from=build-deps /usr/src/app/build /var/www
-COPY nginx.conf /etc/nginx/nginx.conf
-EXPOSE 80
-
-CMD ["nginx", "-g", "daemon off;"]
+RUN npm run build
+RUN npm i -g serve
+ENTRYPOINT [ "serve", "-s", "/app/build"]
