--- a/docker-compose.Production.Local.yml
+++ b/docker-compose.Production.Local.yml
@@ -7,7 +7,7 @@ services:
     depends_on:
       - "tcs-service"
     ports:
-      - "3000:5000"
+      - "5000"
     restart: always
 
   tcs-service:
@@ -31,19 +31,23 @@ services:
 
   nginx:
     image: nginx:1.15-alpine
+    volumes:
+      - ./data/nginx:/etc/nginx/conf.d
+      - ./data/certbot/conf:/etc/letsencrypt
+    command: '/bin/sh -c ''while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g "daemon off;"'''
+
+  letsencrypt:
+    image: linuxserver/letsencrypt
+    environment:
+      URL: "sxbdev.com"
+      VALIDATION: "http"
+      TZ: ""
+      STAGING: "True"
     ports:
       - "80:80"
       - "443:443"
     volumes:
-      - ./data/nginx:/etc/nginx/conf.d
-      - ./data/certbot/conf:/etc/letsencrypt
-      - ./data/certbot/www:/var/www/certbot
-
-  certbot:
-    image: certbot/certbot
-    volumes:
-      - ./data/certbot/conf:/etc/letsencrypt
-      - ./data/certbot/www:/var/www/certbot
+      - ./data/le-ssl/:/etc/letsencrypt
 
 volumes:
   db-data:
