--- a/docker-compose.Production.Local.yml
+++ b/docker-compose.Production.Local.yml
@@ -1,5 +1,3 @@
-version: "3.7"
-
 services:
   tcs-front:
     build:
@@ -7,14 +5,15 @@ services:
     depends_on:
       - "tcs-service"
     ports:
-      - "5000"
+      - "5050:5000"
     restart: always
 
   tcs-service:
-    build:
-      context: ./backend/tcs-service
+    image: lcbutch/tcs-service:master
     depends_on:
       - "tcs-db"
+    ports:
+      - "8080:80"
     env_file:
       - .env
     restart: always
@@ -39,15 +38,18 @@ services:
   letsencrypt:
     image: linuxserver/letsencrypt
     environment:
-      URL: "sxbdev.com"
+      URL: "levibutcher.com"
       VALIDATION: "http"
       TZ: ""
       STAGING: "True"
+      ONLY_SUBDOMAINS: "TRUE"
+      SUBDOMAINS: "devtcs"
     ports:
       - "80:80"
       - "443:443"
     volumes:
       - ./data/le-ssl/:/etc/letsencrypt
+      - ./data/nginx/:/config/nginx/site-confs/
 
 volumes:
   db-data:
