--- a/docker-compose.Production.Local.yml
+++ b/docker-compose.Production.Local.yml
@@ -46,7 +46,7 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./config:/config
+      - ./nginx:/config/nginx/site-confs
     depends_on:
       - "tcs-front"
       - "tcs-service"
