Update when errors are displayed

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,21 +4,21 @@
   "private": true,
   "dependencies": {
     "@reach/router": "^1.2.1",
-    "eslint-plugin-jest": "^22.17.0",
+    "eslint-plugin-jest": "^22.21.0",
     "flow-bin": "^0.107.0",
-    "formik": "^1.5.7",
+    "formik": "2.0.3",
     "normalize.css": "^8.0.1",
     "ramda": "^0.26.1",
-    "react": "^16.8.6",
-    "react-csv": "^1.1.1",
+    "react": "^16.12.0",
+    "react-csv": "^1.1.2",
     "react-datetime-picker": "^2.7.1",
-    "react-dom": "^16.8.6",
-    "react-icons": "^3.7.0",
+    "react-dom": "^16.12.0",
+    "react-icons": "^3.8.0",
     "react-loading-overlay": "^1.0.1",
     "react-scripts": "3.0.1",
     "react-spinners": "^0.5.13",
-    "styled-components": "^4.3.1",
-    "victory": "^32.3.3",
+    "styled-components": "^4.4.1",
+    "victory": "^32.3.7",
     "yup": "^0.27.0"
   },
   "scripts": {
@@ -44,17 +44,17 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^4.0.0",
-    "@testing-library/react": "^8.0.1",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^8.0.9",
     "eslint": "^5.16.0",
-    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-airbnb": "^17.1.1",
     "eslint-config-prettier": "^4.3.0",
-    "eslint-plugin-import": "^2.17.3",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-react": "^7.13.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-react": "^7.16.0",
     "lint-staged": "^8.2.1",
-    "prettier": "^1.18.2",
+    "prettier": "^1.19.1",
     "pretty-quick": "^1.11.1"
   }
 }
