--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "@reach/router": "^1.2.1",
-    "eslint-plugin-jest": "^22.21.0",
     "flow-bin": "^0.107.0",
     "formik": "2.0.3",
     "normalize.css": "^8.0.1",
@@ -15,7 +14,7 @@
     "react-dom": "^16.12.0",
     "react-icons": "^3.8.0",
     "react-loading-overlay": "^1.0.1",
-    "react-scripts": "3.0.1",
+    "react-scripts": "^3.2.0",
     "react-spinners": "^0.5.13",
     "styled-components": "^4.4.1",
     "victory": "^32.3.7",
@@ -46,13 +45,15 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^8.0.9",
-    "eslint": "^5.16.0",
+    "eslint": "^6.6.0",
     "eslint-config-airbnb": "^17.1.1",
     "eslint-config-prettier": "^4.3.0",
     "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jest": "^22.21.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.16.0",
+    "flow-typed": "^2.6.2",
     "lint-staged": "^8.2.1",
     "prettier": "^1.19.1",
     "pretty-quick": "^1.11.1"
