--- a/backend/tcs-service-test/tcs-service-test.csproj
+++ b/backend/tcs-service-test/tcs-service-test.csproj
@@ -11,8 +11,9 @@
     <PackageReference Include="AutoFixture" Version="4.10.0" />
     <PackageReference Include="AutoFixture.AutoMoq" Version="4.10.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.WebApiCompatShim" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="2.2.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0"/>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="2.2.4" />
     <PackageReference Include="Moq" Version="4.11.0" />
