Setup integration testing for CI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -120,6 +120,18 @@ jobs:
           name: Pushing Image to Docker Hub
           command: docker push $DOCKER_USER/tcs-front:$CIRCLE_BRANCH
 
+  test-integration:
+    executor: docker-exec
+    working_directory: ~/repo/
+    steps:
+      - setup_remote_docker
+      - checkout:
+          path: ~/repo
+      - run:
+          name: Run Integration Tests
+          command: >
+            docker-compose -f docker-compose.Test.yml run tcs-integration
+
 workflows:
   version: 2
 
@@ -133,9 +145,13 @@ workflows:
       - test-back:
           requires:
             - setup-back
+      - test-integration:
+          requires:
+            - setup-back
       - deploy-back:
           requires:
             - test-back
+            - test-integration
       - deploy-front:
           requires:
             - test-front
